# foundry-build

./: .gitignore  README.md  apphost.ts  aspire.config.json  eslint.config.mjs  package-lock.json  package.json
dotnet-sample/: apphost.cs  aspire.config.json  nuget.config
dotnet-sample/frontend/: index.html
dotnet-sample/frontend/src/: styles.css
dotnet-sample/frontend/src/lib/: responses-client.ts
dotnet-sample/service-defaults/: Extensions.cs  service-defaults.csproj  service-defaults.csproj.lscache
dotnet-sample/trip-agent-dotnet/: Program.cs  TripAgent.Dotnet.csproj  TripAgent.Dotnet.csproj.lscache
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
python-sample/: apphost.ts  aspire.config.json  package-lock.json  package.json
python-sample/frontend/: package-lock.json  package.json  vite.config.ts
python-sample/trip-agent-python/: pyproject.toml
python-sample/trip-agent-python/trip_agent_python/: main.py
weather-agent-python/: pyproject.toml
weather-agent-python/weather_agent_python/: main.py
